# hockey1

./: .replit  README.md  config.py  console_app.py  database.py  hockey_coach.db  install_guide.md  main.py  models.py  pyproject.toml  replit.md  simple_app.py  utils.py
resources/: styles.qss
services/: __init__.py  auth_service.py  match_service.py  player_service.py  schedule_service.py  stats_service.py  team_service.py  training_service.py
ui/: __init__.py  add_stats_dialog.py  auth.py  dialogs.py  login.py  main_window.py  match_schedule.py  player_card.py  player_comparison_dialog.py  team_roster.py  team_stats.py  tournament_teams.py  training_plan.py  training_schedule.py  widgets.py
