[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hockey-coach-app"
version = "1.0.0"
description = "Рабочее место тренера хоккейной команды"
readme = "README.md"
authors = [
    {name = "Разработчик", email = "example@mail.ru"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt5>=5.15.0",
    "SQLAlchemy>=2.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "psycopg2-binary>=2.9.0",
    "werkzeug>=2.0.0",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/username/hockey-coach-app"
"Bug Tracker" = "https://github.com/username/hockey-coach-app/issues"

[tool.setuptools]
packages = ["ui", "services"]